<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Jagdeep.Assign11</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="text">Jagdeep Matharu</string>
    <string name="activity">Activity</string>
    <string name="Browse">Browse</string>
    <string name="back">Main Menu</string>
    <string name="desc"/>
    <string name="screen">Second Activity</string>

</resources>
